<resources>
    <string name="app_name">EZ Check</string>


    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="start">Start</string>
    <string name="title_slide1">Easy Way To Learn Android</string>
    <string name="desc_slide1">We Provide Tutorials For Easy to Understand</string>
    <string name="title_slide2">Battery status update</string>
    <string name="desc_slide2">It will  keep you updated on battery charging status through notification and home screen widget</string>
    <string name="title_slide3">Alert on 100%</string>
    <string name="desc_slide3">It will alert you when battery reaches 100%</string>
    <string name="title_activity_home">Home</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_main">EZ Check</string>
//Airtel
    <string name="airtel">Airtel</string>
    <string name="airtel_recharge">Recharge</string>
    <string name="airtel_balence_check">Check Your Prepaid Balence</string>
    <string name="airtel_loan">Take Loan</string>
    <string name="airtel_number_check">Check Your Mobile Number</string>


    <string name="aircel">Aircel</string>
    <string name="bsnl">Bsnl</string>
    <string name="relince">Reliance</string>
    <string name="docomo">Tata Docomo</string>
    <string name="jio">Reliance Jio</string>
    <string name="Idea">Idea</string>
    <string name="vodaphone">Vodaphone</string>
    <string name="unionr">Unionor</string>
</resources>
