<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="@android:color/holo_red_light">
        <ImageView
            android:id="@+id/airtel_title"
            android:layout_width="110dp"
            android:layout_height="110dp"

            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <EditText
                android:id="@+id/airtel_edittext"
                android:layout_width="213dp"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/airtel_balence"
                android:layout_alignStart="@+id/airtel_balence"
                android:layout_marginTop="120dp"
                android:ems="10"
                android:hint="Enter Recharge Code"
                android:inputType="number" />

            <Button
                android:id="@+id/airtel_recharge_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/airtel_balence"
                android:layout_alignEnd="@+id/airtel_balence"
                android:layout_alignRight="@+id/airtel_balence"
                android:background="@android:color/holo_red_light"
                android:text="@string/airtel_recharge"
                android:textColor="@android:color/background_dark" />

            <Button
                android:id="@+id/airtel_balence"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/airtel_edittext"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="22dp"
                android:background="@android:color/holo_red_light"
                android:text="@string/airtel_balence_check" />

            <Button
                android:id="@+id/airtel_loan"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/airtel_balence"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="12dp"
                android:background="@android:color/holo_red_light"
                android:text="@string/airtel_loan" />

            <Button
                android:id="@+id/airtel_checkmobilenumber"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/airtel_loan"
                android:layout_alignStart="@+id/airtel_loan"
                android:layout_below="@+id/airtel_loan"
                android:layout_marginTop="9dp"
                android:background="@android:color/holo_red_light"
                android:text="@string/airtel_number_check" />

            <Button
                android:id="@+id/airtel_customercare"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/airtel_checkmobilenumber"
                android:layout_alignStart="@+id/airtel_checkmobilenumber"
                android:layout_below="@+id/airtel_checkmobilenumber"
                android:layout_marginTop="10dp"
                android:background="@android:color/holo_red_light"
                android:text="Call To Customer Care " />

            <Button
                android:id="@+id/airtel_mailcare"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/airtel_customercare"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="9dp"
                android:background="@android:color/holo_red_light"
                android:text="Mail To Customer Care" />

            <Button
                android:id="@+id/airtel_share"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/airtel_mailcare"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="9dp"
                android:background="@android:color/holo_red_light"
                android:text="Share Your Balence To Your Friends" />
            <Button
                android:id="@+id/airtel_money"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/airtel_share"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="9dp"
                android:background="@android:color/holo_red_light"
                android:text="Airtel Money"/>
            <Button
                android:id="@+id/check_data_balence"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/airtel_money"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="9dp"
                android:background="@android:color/holo_red_light"
                android:text="Check Your Data Balence"
                />
            <Button
                android:id="@+id/airtel_sms_balence"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/check_data_balence"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="9dp"
                android:background="@android:color/holo_red_light"
                android:text="Check Your SMS Balence"
                />
            <Button
                android:id="@+id/airtel_valueaddedservices"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/airtel_sms_balence"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="9dp"
                android:background="@android:color/holo_red_light"
                android:text="Check Your Value Added Services"
                />
            <Button
                android:id="@+id/last_callcharges"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/airtel_valueaddedservices"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="9dp"
                android:background="@android:color/holo_red_light"
                android:text="Last 5 Call Charges"
                />
            <Button
                android:id="@+id/port"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/last_callcharges"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="9dp"
                android:background="@android:color/holo_red_light"
                android:text="You Want To Change Another Network PORT"/>
            <Button
                android:id="@+id/airtel_rewardtunes"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/port"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="9dp"
                android:background="@android:color/holo_red_light"
                android:text="Activate Airtel Free Rewards Tunes For Incomming Calls"/>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>

